<!--
  ~ Copyright 2021 Karsten Ohme
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MITM Demo App</string>
    <string name="heading">MITM Demo App</string>
    <string name="description">Demonstrating a MITM HTTPs proxy supporting a client certificate for badssl.com.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="exception">Exception</string>
    <string name="success">Success</string>
    <string name="success_msg">Proxy is running.</string>
    <string name="success_stopped_msg">Proxy is stopped.</string>
    <string name="start_proxy">Start Proxy</string>
    <string name="stop_proxy">Stop Proxy</string>
</resources>